Wed May 22 07:36:08 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (garbage_collect): all GC is start from garbage_collect()
	  (or garbage_collect_body()). `garbage_collect()' accept additional
	  two parameters `full_mark' and `immediate_sweep'.
	  If `full_mark' is TRUE, then force it full gc (major gc), otherwise,
	  it depends on status of object space. Now, it will be minor gc.
	  If `immediate_sweep' is TRUE, then disable lazy sweep.
	  To allocate free memory, `full_mark' and `immediate_sweep' should be
	  TRUE. Otherwise, they should be FALSE.

	* gc.c (gc_prepare_free_objects): use `garbage_collect_body()'.

	* gc.c (slot_sweep, before_gc_sweep, after_gc_sweep): add logging code.

Tue May 21 22:47:06 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/strscan/strscan.c (strscan_aref): support named captures.
	  patched by Konstantin Haase [ruby-core:54664] [Feature #8343]

Tue May 21 21:48:44 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/ruby/test_dir_m17n.rb (TestDir_M17N#test_entries_compose):
	  Use #each instead of #map just for iteration.

Tue May 21 19:57:22 2013  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/lib/digest.rb (Digest::Class.file): Take optional
	  arguments that are passed to the constructor of the digest
	  class.

Tue May 21 17:21:12 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: remove gc_profile_record::is_marked. always true.

Tue May 21 17:13:40 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: fix to collect additional information for GC::Profiler.
	  * major/minor GC
	  * trigger reason of GC

	* gc.c (gc_profile_dump_on): change reporting format with
	  added information.

	* gc.c (gc_profile_record_get): return added information by
	  :GC_FLAGS => array.

Tue May 21 16:45:31 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: GC::Profiler's sweeping time is accumulated all slot
	  sweeping time. At lazy GC, GC::Profiler makes new record entry
	  for each lazy_sweep(). In this change, accumulating all
	  slot_sweep() time.